--- a/example/debug.html
+++ b/example/debug.html
@@ -176,10 +176,7 @@
           x: {scale: scales.x, position: 'top', title: 'Howdy'},
           y: {scale: scales.y, position: 'left'}
         },
-        title: {text: 'Howdy!', position: 'bottom'},
-        options: {
-          twoStepDraw: true
-        }
+        title: {text: 'Howdy!', position: 'bottom'}
       };
     };
 
@@ -217,10 +214,7 @@
             y: {data: values}
           },
           legend: false,
-          title: {text: 'Howdy ' + count++ + '!', position: 'bottom'},
-          options: {
-            twoStepDraw: true
-          }
+          title: {text: 'Howdy ' + count++ + '!', position: 'bottom'}
         };
       });
     }
