Update axis layout

--- a/example/debug.html
+++ b/example/debug.html
@@ -48,7 +48,7 @@
 
   <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript">
-    d3.chart.helpers.log.enable = true;
+    // d3.chart.helpers.log.enable = true;
 
     // Data
     // ---- //
