--- a/example/debug.html
+++ b/example/debug.html
@@ -174,7 +174,7 @@
         },
         axes: {
           x: {scale: scales.x, position: 'top', title: 'Howdy'},
-          y: {scale: scales.y, position: 'left'}
+          y: {scale: scales.y, position: 'left', duration: 500}
         },
         title: {text: 'Howdy!', position: 'bottom'}
       };
