--- a/example/index.html
+++ b/example/index.html
@@ -83,7 +83,7 @@
               axes: {
                 x: {
                   type: 'AxisValues',
-                  title: 'X Title',
+                  title: {text: 'X Title', margins: {top: 0.5}},
                   scale: scales.x,
                   position: 'bottom'
                 },
