--- a/example/index.html
+++ b/example/index.html
@@ -62,7 +62,7 @@
 
                   labels: {
                     offset: 8,
-                    position: 'top|bottom',
+                    position: 'top',
                     style: {
                       'font-size': '14px'
                     },
